--- a/OrderApi.Presentation/appsettings.json
+++ b/OrderApi.Presentation/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "eCommerceConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=ECommerceDb ;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "MySeriLog": {
+    "FileName": "OrderApi"
+  },
+  "Authentication": {
+    "Key": "secret-key-123",
+    "Issuer": "http://localhost:5000",
+    "Audience": "http://localhost:5000"
+  }
 }
