--- a/OrderApi.Presentation/appsettings.json
+++ b/OrderApi.Presentation/appsettings.json
@@ -16,5 +16,8 @@
     "Key": "secret-key-123",
     "Issuer": "http://localhost:5000",
     "Audience": "http://localhost:5000"
+  },
+  "ApiGateway": {
+    "BaseAddress": "http://localhost:5001"
   }
 }
