--- a/OrderApi.Presentation/appsettings.json
+++ b/OrderApi.Presentation/appsettings.json
@@ -13,7 +13,7 @@
     "FileName": "OrderApi"
   },
   "Authentication": {
-    "Key": "secret-key-123",
+    "Key": "V7nR$2u!bM94qXj@TzW8eKp#sL0dFgAc",
     "Issuer": "http://localhost:5000",
     "Audience": "http://localhost:5000"
   },
